add_executable(test1 test1.cpp)
target_link_libraries(test1 tclap)

add_executable(test2 test2.cpp)
target_link_libraries(test2 tclap)

add_executable(test3 test3.cpp)
target_link_libraries(test3 tclap)

add_executable(test4 test4.cpp)
target_link_libraries(test4 tclap)

add_executable(test5 test5.cpp)
target_link_libraries(test5 tclap)

add_executable(test6 test6.cpp)
target_link_libraries(test6 tclap)

add_executable(test7 test7.cpp)
target_link_libraries(test7 tclap)

add_executable(test8 test8.cpp)
target_link_libraries(test8 tclap)

add_executable(test9 test9.cpp)
target_link_libraries(test9 tclap)

add_executable(test10 test10.cpp)
target_link_libraries(test10 tclap)

add_executable(test11 test11.cpp)
target_link_libraries(test11 tclap)

add_executable(test12 test12.cpp)
target_link_libraries(test12 tclap)

add_executable(test13 test13.cpp)
target_link_libraries(test13 tclap)

add_executable(test14 test14.cpp)
target_link_libraries(test14 tclap)

add_executable(test15 test15.cpp)
target_link_libraries(test15 tclap)

add_executable(test16 test16.cpp)
target_link_libraries(test16 tclap)

add_executable(test17 test17.cpp test17-a.cpp)
target_link_libraries(test17 tclap)

add_executable(test18 test18.cpp)
target_link_libraries(test18 tclap)

add_executable(test19 test19.cpp)
target_link_libraries(test19 tclap)

add_executable(test20 test20.cpp)
target_link_libraries(test20 tclap)

add_executable(test21 test21.cpp)
target_link_libraries(test21 tclap)
